# flowa

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  schema.sql  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  lint.yaml  release-chat-service.yaml  release-flowa.yaml  release-flowapy.yaml  release-react-viewer.yaml
dags/: flowa_assessment.py
dags/flowa_operator/: __init__.py  config.py  docker.py  ecs.py  kubernetes.py
examples/demo/: .env.example  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
examples/demo-gateway/: README.md  pyproject.toml
examples/demo-gateway/src/demo_gateway/: config.py  main.py  progress.py  runs.py
examples/demo-gateway/tests/: conftest.py  test_main.py  test_progress.py  test_resolve.py  test_runs.py
examples/demo/fixtures/: LICENSES.md
examples/demo/fixtures/assessments/F508del/: aggregate.json  query.json
examples/demo/fixtures/assessments/NM_000152_5-c_1935C_A/: aggregation.json  query.json  variant_details.json
examples/demo/fixtures/assessments/NM_001035_3-c_14174A_G/: aggregation.json  query.json  variant_details.json
examples/demo/fixtures/assessments/RYR2-NM_001035_3-c_14174A_G/: query.json
examples/demo/fixtures/assessments/RYR2-Y4725C/: aggregate.json  variant_details.json
examples/demo/fixtures/papers/10.1002%2Fajmg.a.61481/: metadata.json
examples/demo/fixtures/papers/10.1002%2Fhumu.23878/: main.md  markdown.md  merged.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1016%2Fj.ejmg.2020.103997/: metadata.json
examples/demo/fixtures/papers/10.1016%2Fj.nmd.2022.02.002/: metadata.json
examples/demo/fixtures/papers/10.1016%2Fj.tjog.2022.07.008/: metadata.json
examples/demo/fixtures/papers/10.1016%2Fj.ymgmr.2024.101163/: markdown.md  merged.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1038%2Fs41598-022-25914-8/: markdown.md  merged.md  metadata.json  pdf_index.pkl.zst  source.md
examples/demo/fixtures/papers/10.1093%2Fhmg%2Fddz218/: metadata.json
examples/demo/fixtures/papers/10.1136%2Fjmg-2022-108675/: metadata.json
examples/demo/fixtures/papers/10.1161%2FCIRCGEN.116.001424/: metadata.json
examples/demo/fixtures/papers/10.1186%2Fs12881-019-0878-8/: main.md  markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1186%2Fs13023-021-01817-1/: markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1186%2Fs13023-021-02146-z/: markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1186%2Fs13023-023-02848-6/: main.md  markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1186%2Fs13052-019-0692-0/: markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.1253%2Fcircj.cj-12-1460/: metadata.json
examples/demo/fixtures/papers/10.1371%2Fjournal.pone.0131517/: markdown.md  metadata.json
examples/demo/fixtures/papers/10.1371%2Fjournal.pone.0243476/: markdown.md  metadata.json
examples/demo/fixtures/papers/10.2169%2Finternalmedicine.9843-17/: metadata.json
examples/demo/fixtures/papers/10.3389%2Ffcvm.2022.1061384/: main.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.3389%2Ffcvm.2023.1261172/: markdown.md  metadata.json  pdf_index.pkl.zst  source.md
examples/demo/fixtures/papers/10.3389%2Ffimmu.2024.1336599/: markdown.md  metadata.json  pdf_index.pkl.zst
examples/demo/fixtures/papers/10.3389%2Ffped.2021.729824/: main.md  markdown.md  merged.md  metadata.json  pdf_index.pkl.zst
examples/demo/scripts/: chat-service.ts  copy-pdfjs-assets.ts  exercise-llm.ts  start.ts
examples/demo/src/db/: migrate.ts  schema.sql
examples/demo/src/lib/: aggregate.ts  chatSessionClient.ts  citationResolverClient.ts  demoConfig.ts  paperInvalidation.ts  papers.ts  progressEvents.ts  runs.ts  triageBackendClient.ts  triageDb.ts  variantId.ts
examples/demo/src/pages/: _app.tsx  index.tsx
examples/demo/src/pages/api/papers/: index.ts
examples/demo/src/styles/: globals.css
examples/demo/test/: LiteratureView.test.tsx  ProgressLog.test.tsx  aggregate.test.ts  chat-service.test.ts  index-page.test.tsx  matchFilename.test.ts  paper-invalidation.test.ts  papers-pdf-upload.test.ts  papers-route.test.ts  papers-supplements.test.ts  papers.test.ts  progress-route.test.ts  runs-latest-route.test.ts  runs-route.test.ts  runs.test.ts  setup.ts  triage.test.ts  variantId.test.ts
prompts/: aggregate_assessment_prompt.txt  aggregate_assessment_schema.json  individual_extraction_prompt.txt  individual_extraction_schema.json  package.json
prompts/generic/: aggregate_edit_schema.ts  aggregate_prompt.txt  aggregate_schema.py  aggregation_edit_prompt.txt  aggregation_prompt.txt  aggregation_schema.py  extraction_prompt.txt  extraction_schema.py  transcription_prompt.txt
prompts/generic/aggregation/: authoring.txt  categories.json  edit_prompt.txt  edit_schema.ts  prompt.txt  schema.py
prompts/generic/aggregation/categories/: acmg_classification.txt
prompts/generic/extraction/: prompt.txt  schema.py
scripts/: backfill_docling_md.py
src/flowa/: __init__.py  aggregate.py  annotate.py  artifact.py  assemble.py  cli.py  clinvar.py  content_validation.py  convert.py  db.py  docling.py  download.py  extract.py  http_retry.py  models.py  normalize.py  pdf_index_cache.py  pdfium.py  progress.py  prompts.py  query.py  report.py  resolve.py  run.py  schema.py  settings.py  storage.py
src/flowa/commands/: __init__.py  annotate.py  download.py  process.py  query.py  report.py
src/flowa/prompts/: __init__.py
templates/: report.css  report.html
tests/: __init__.py  test_aggregate.py  test_assemble.py  test_content_validation.py  test_convert.py  test_download.py  test_normalize.py  test_pdf_index_cache.py  test_pdfium.py  test_progress.py  test_prompts.py  test_resolve.py
(+65 files in other folders)
