[project]
name = "flowa"
version = "0.1.0"
description = "Variant literature assessment pipeline with AI extraction"
readme = "README.md"
requires-python = "==3.13.*"
license = { file = "LICENSE" }
dependencies = [
    "anchorite>=0.4.0",
    "boto3",
    "defusedxml",
    "fsspec",
    "gcsfs",  # GCS support for fsspec
    "httpx",
    "jinja2",
    "logfire",
    "pydantic-settings",
    "pypdf",
    "s3fs",   # S3/MinIO support for fsspec
    "tenacity",
    "typer",
]

[project.optional-dependencies]
# pydantic-ai-slim drives both PDF→Markdown transcription (`flowa.convert`) and
# evidence extraction/aggregation. It needs to be a declared dep (not just
# transitive) so the [tool.uv.sources] git pin below applies — otherwise uv
# would fall back to the PyPI version and lose the cherry-picked Bedrock
# native-output patch.
anthropic = ["pydantic-ai-slim[anthropic]"]
bedrock = ["pydantic-ai-slim[bedrock]"]
google = ["pydantic-ai-slim[google]"]
openai = ["pydantic-ai-slim[openai]"]

[tool.uv]
# Supply-chain hygiene: only install package versions ≥ 7 days old. Pairs with
# the npm/pnpm `min-release-age` gates configured globally; this is the
# in-repo equivalent for the Python side so contributors and CI inherit it.
exclude-newer = "7 days"

# Bypass the gate for anchorite — we own the package and need to consume
# newly-cut versions immediately. seq-smith comes along because new anchorite
# releases pin it tightly. Drop entries once the pinned versions are older
# than 7 days on PyPI.
exclude-newer-package = { anchorite = "0 days", seq-smith = "0 days" }

# Pin pydantic-ai-slim to a fork of v1.83.0 with PR #4237 cherry-picked on top.
# PR #4237 adds Bedrock native structured output (`NativeOutput`) and strict tool
# calls, which enable constrained JSON sampling and eliminate retry loops on
# malformed `final_result` tool args. Fork branch: `v1.83.0+bedrock-strict` on
# https://github.com/lgruen-vcgs/pydantic-ai (rebased from
# https://github.com/shailendher/pydantic-ai/tree/feat/bedrock-native-output-support).
# Switch back to the upstream release once #4237 lands and is published to PyPI.
[tool.uv.sources]
pydantic-ai-slim = { git = "https://github.com/lgruen-vcgs/pydantic-ai", rev = "c908946f71cfafd1be18ade8d9cd1296fb6a5558", subdirectory = "pydantic_ai_slim" }

[dependency-groups]
dev = [
    "boto3-stubs[s3]",
    "ruff",
    "mypy",
    "pytest",
    "types-defusedxml",
    "pre-commit>=4.5.1",
]

[project.scripts]
flowa = "flowa.cli:app"

[tool.mypy]
python_version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade - modernize Python code
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults - false positive with Typer
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
