[project]
name = "flowapy"
version = "0.3.0"
description = "Variant literature assessment pipeline with AI extraction"
readme = "README.md"
requires-python = "==3.13.*"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "anchorite>=0.5.0",
    "boto3",
    "defusedxml",
    "fsspec",
    "gcsfs",  # GCS support for fsspec
    "httpx",
    "jinja2",
    "logfire",
    "markitdown[docx,xls,xlsx]>=0.1.5",
    "pydantic-settings",
    "pypdf",
    "s3fs",   # S3/MinIO support for fsspec
    "socksio>=1.0.0",  # httpx SOCKS-proxy support (proxied networks); not imported directly
    "tenacity",
    "typer",
    "zstandard",
]

[project.optional-dependencies]
# pydantic-ai-slim drives both PDF→Markdown transcription (`flowa.convert`) and
# evidence extraction/aggregation. Pinned exact while the 7-day supply-chain
# floor is bypassed for this package below — see [tool.uv].exclude-newer-package.
# Once 1.101.0 ages past the gate, the pin can be relaxed to a range and the
# exception removed.
anthropic = ["pydantic-ai-slim[anthropic]==1.101.0"]
bedrock = ["pydantic-ai-slim[bedrock]==1.101.0"]
google = ["pydantic-ai-slim[google]==1.101.0"]
openai = ["pydantic-ai-slim[openai]==1.101.0"]

[project.urls]
Homepage = "https://github.com/populationgenomics/flowa"
Source = "https://github.com/populationgenomics/flowa"
Issues = "https://github.com/populationgenomics/flowa/issues"

[tool.uv]
# Supply-chain hygiene: only install package versions ≥ 7 days old. Pairs with
# the npm/pnpm `min-release-age` gates configured globally; this is the
# in-repo equivalent for the Python side so contributors and CI inherit it.
exclude-newer = "7 days"

# Bypass the gate for anchorite — we own the package and need to consume
# newly-cut versions immediately. seq-smith comes along because new anchorite
# releases pin it tightly. pydantic-ai-slim is bypassed temporarily so we can
# pick up 1.101.0's Bedrock native-output and adaptive-thinking fixes ahead of
# the 7-day age threshold; the exact pin in [project.optional-dependencies]
# keeps the bypass scoped to one deliberately-chosen version. pydantic-graph
# is a transitive dep that pydantic-ai-slim==1.101.0 pins to ==1.101.0 in its
# upstream metadata, so the equality constraint already scopes that bypass too.
# Drop the pydantic-ai-slim + pydantic-graph entries (and relax the version
# pin) once 1.101.0 ages past 7 days on PyPI (around 2026-05-29).
exclude-newer-package = { anchorite = "0 days", seq-smith = "0 days", pydantic-ai-slim = "0 days", pydantic-graph = "0 days" }

[dependency-groups]
dev = [
    "boto3-stubs[s3]",
    "ruff",
    "mypy",
    "pytest",
    "types-defusedxml",
    "pre-commit>=4.5.1",
    "types-openpyxl>=3.1.5.20260518",
]

[project.scripts]
flowa = "flowa.cli:app"

[tool.mypy]
python_version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade - modernize Python code
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults - false positive with Typer
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The PyPI distribution name is `flowapy` (the `flowa` name was already taken
# on PyPI) but the import name stays `flowa`. Hatch auto-detects the wheel
# package from `[project].name` by default, so we have to tell it explicitly.
[tool.hatch.build.targets.wheel]
packages = ["src/flowa"]

# Ship the generic prompt set inside the wheel so `pip install flowapy` is
# self-contained. The on-disk source lives at `prompts/generic/` (so the
# pnpm workspace package `@flowajs/prompts` can also expose its TypeScript
# schemas); force-include mirrors the .py/.txt files into the wheel at
# `flowa/prompts/generic/`, where flowa.prompts._prompts_dir picks them up
# as a sibling of the loader module.
[tool.hatch.build.targets.wheel.force-include]
"prompts/generic" = "flowa/prompts/generic"

# `uv build` builds the sdist first, then builds the wheel _from_ the sdist —
# so the wheel's force-include rule above needs `prompts/generic/` to be in
# the sdist at its natural path. Hatch's default sdist VCS scan inexplicably
# drops the `prompts/` tree, so make the inclusion explicit here. Identity
# remap (prompts/generic → prompts/generic) preserves the natural layout in
# the sdist; the wheel target then remaps to flowa/prompts/generic/.
[tool.hatch.build.targets.sdist.force-include]
"prompts/generic" = "prompts/generic"
