[project]
name = "demo_gateway"
version = "0.0.0"
description = "Tiny FastAPI service wrapping flowa for the end-to-end demo."
readme = "README.md"
requires-python = "==3.13.*"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "flowapy[bedrock,anthropic,google,openai]",
    "pydantic",
    "pydantic-settings",
    "uvicorn[standard]",
]

[tool.uv]
# Match the polyglot supply-chain posture of the parent flowa repo: only
# install package versions ≥ 7 days old.
exclude-newer = "7 days"
# Bypass the gate for anchorite — flowa pulls it as a base dep and we need
# to consume newly-cut versions immediately. seq-smith comes along because
# new anchorite releases pin it tightly. pydantic-ai-slim is bypassed
# temporarily so we can pick up 1.101.0's Bedrock native-output and adaptive-
# thinking fixes ahead of the 7-day age threshold; the exact pin lives in
# flowa's pyproject.toml. pydantic-graph rides along because pydantic-ai-slim
# pins it via upstream equality. Drop these two entries (in lockstep with the
# parent flowa pyproject) once 1.101.0 ages past 7 days on PyPI (around
# 2026-05-29).
exclude-newer-package = { anchorite = "0 days", seq-smith = "0 days", pydantic-ai-slim = "0 days", pydantic-graph = "0 days" }

[tool.uv.sources]
# flowapy (the PyPI distribution name; import is still `flowa`) lives one
# directory up. demo-gateway never installs from PyPI; it always tracks the
# in-tree flowa it lives alongside. Editable so source edits to flowa
# propagate without `uv sync` between iterations.
flowapy = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "httpx",
    "mypy",
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
demo-gateway = "demo_gateway.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_gateway"]

[tool.mypy]
python_version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
